Add enabled/disabled pseudo-classes, line-through decoration, and Vue 3 DOM/JS support
- :enabled/:disabled state matching for form controls, incl. disabled <fieldset> inheritance (SelectorParser, DomSelectorAdapter)

- text-decoration: line-through/overline through CSS parsing, RenderStyle, render tree, layout, and strike-through painting

- New HtmlSerializer (engine-html): innerHTML/outerHTML with attribute/text escaping and void elements

- JS global bootstrap: namespace-aware SVGElement/MathMLElement constructors, Object.defineProperty value-descriptor passthrough for host-element expandos (Vue), Window listener API, arbitrary event properties

- Regression tests incl. mounting a Vue 3 app and rendering reactive content

- Windows Maven profile graalvm-25.1 (GraalJS 25.1.3), README updates, ignore generated Vue3 demo artifacts

- Progress docs: CSS3Test 46/94 (52%), Acid3 65/100, 111/194 overall